--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="title-links">ACESTREAM LINKS</h1>
+  <h1 class="title-links">ACESTREAM LINKS by Markel05</h1>
   <li class="links" *ngFor="let link of links">
     <a href="{{ link.url }}">{{ link.title }}</a>
   </li>
