--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <h1 class="title-links">ACESTREAM LINKS by Markel05</h1>
   <li class="links" *ngFor="let link of links">
     <a href="{{ link.url }}">{{ link.title }}</a>
+    <button class="copy-button" ngbTooltip="Copiar enlace" placement="right" tooltipClass="tooltip-copy" (click)="copyLink(link.url)"><i class="bi bi-copy"></i></button>
   </li>
 </div>
