--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,64 @@
 <div class="container">
   <h1 class="title-links">ACESTREAM LINKS by Markel05</h1>
-  <li class="links" *ngFor="let link of links">
-    <a href="{{ link.url }}">{{ link.title }}</a>
-    <button class="copy-button" ngbTooltip="Copiar enlace" placement="right" tooltipClass="tooltip-copy" (click)="copyLink(link.url)"><i class="bi bi-copy"></i></button>
-  </li>
+  <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
+  <div class="futbol-tv-agendas">
+    <iframe
+      id="ftv_iframe"
+      name="ftv_iframe"
+      src="https://widgets.futbolenlatv.com/partidos/competition/la-liga?color=007eff&culture=es-ES"
+      width="400"
+      height="401"
+      frameborder="0"
+      scrolling="auto"
+      style="margin-bottom: 10px"
+    ></iframe>
+    <iframe
+      id="ftv_iframe"
+      name="ftv_iframe"
+      src="https://widgets.futbolenlatv.com/partidos/competition/liga-campeones?color=007eff&culture=es-ES"
+      width="400"
+      height="401"
+      frameborder="0"
+      scrolling="auto"
+      style="margin-bottom: 10px"
+    ></iframe>
+    <iframe
+      id="ftv_iframe"
+      name="ftv_iframe"
+      src="https://widgets.futbolenlatv.com/partidos/competition/europa-league?color=007eff&culture=es-ES"
+      width="400"
+      height="401"
+      frameborder="0"
+      scrolling="auto"
+      style="margin-bottom: 10px"
+    ></iframe>
+    <iframe
+      id="ftv_iframe"
+      name="ftv_iframe"
+      src="https://widgets.futbolenlatv.com/partidos/equipo/athletic-club-de-bilbao?color=007eff&culture=es-ES"
+      width="400"
+      height="401"
+      frameborder="0"
+      scrolling="auto"
+      style="margin-bottom: 10px"
+    ></iframe>
+  </div>
+
+  <h3 class="header-enlaces">ENLACES</h3>
+  <div class="links-container">
+    <div class="column" *ngFor="let column of [0, 1]">
+      <li class="links" *ngFor="let link of links | slice: (column * (links.length / 2)) : ((column + 1) * (links.length / 2))">
+        <a href="{{ link.url }}">{{ link.title }}</a>
+        <button
+          class="copy-button"
+          ngbTooltip="Copiar enlace"
+          placement="right"
+          tooltipClass="tooltip-copy"
+          (click)="copyLink(link.url)"
+        >
+          <i class="bi bi-copy"></i>
+        </button>
+      </li>
+    </div>
+  </div>
 </div>
