--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,6 +12,9 @@
 
 .copy-button {
   margin-left: 5px;
+  cursor: pointer;
+  padding: 1px 1px;
+  font-size: 12px;
 }
 
 .tooltip-copy {
@@ -55,4 +58,19 @@
 
 .column:last-child {
   margin-right: 0;
+}
+
+.iframe-container {
+  position: relative;
+  width: 400px;
+  height: 401px;
+  margin-bottom: 10px;
+}
+
+.spinner-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
 }
