--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
   <h1 class="title-links">ACESTREAM LINKS by Markel05</h1>
   <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
   <div class="futbol-tv-agendas">
+    <p-messages class="custom-message"
+    [enableService]="true" 
+    [closable]="false" />
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[0]">
         <mat-spinner></mat-spinner>
