--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.1/angular-material-icons.min.js"></script>
 <div class="container">
-  <h1 class="title-links">ACESTREAM LINKS by Markel05</h1>
+  <div class="header">
+    <h1 class="header-title">ACESTREAM LINKS</h1>
+  </div>
   <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
   <div class="futbol-tv-agendas">
     <p-messages class="custom-message"
@@ -87,7 +89,7 @@
       <p class="how-to-play-text">
         Para reproducir los enlaces Ace Stream en tu dispositivo necesitas tener instalado Ace Stream Media. Si no lo tienes instalado, 
         puedes descargarlo desde la página oficial de Ace Stream haciendo clic <a href="https://www.acestream.org/?page=products">aquí</a>. Una vez instalado,
-        tienes dos formas de reproducir los enlaces: la primera es copiar el enlace, abrir Ace Player manualmente y pegar el enlace en la opción "Medio" -> "Open Ace Stream Content ID".
+        tienes dos formas de reproducir los enlaces: la primera es copiar el enlace, abrir Ace Player manualmente y pegar el enlace en la opción "Medio" <i class="bi bi-arrow-right"></i> "Open Ace Stream Content ID".
         La segunda es haciendo clic directamente en el enlace, lo que abrirá automáticamente Ace Player y reproducirá el contenido. Para reproducir estos enlaces, asegúrate de tener
         abierto Ace Stream Engine (ace_engine / Ace Stream HD), si no, ábrelo tú manualmente desde la ruta de instalación de Ace Stream.
         Para reproducir los enlaces correctamente, es recomendable cambiar ciertos parámetros en la configuración de Ace Stream. 
@@ -96,6 +98,6 @@
     </div>
     <div class="footer">
       <p class="footer-text">© 2024 Markel05</p>
-      <a ngbTooltip="GitHub" placement="right" href="https://github.com/MarkelRoman05"><i class="bi bi-github github-logo"></i></a>
+      <a ngbTooltip="GitHub" placement="right" href="https://github.com/MarkelRoman05" class="github-button"><i class="bi bi-github github-logo"></i></a>
     </div>
 </div>
