--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,7 +21,7 @@
 .copy-button {
   margin-left: 7px;
   cursor: pointer;
-  padding: 1px 1px;
+  padding: 0px 2px;
   font-size: 12px;
   border: 1px solid #ccc;
 }
@@ -85,6 +85,23 @@
 .how-to-play-text a {
   color: #007bff; /* Color del enlace */
   text-decoration: none; /* Sin subrayado */
+}
+
+.acestream-link {
+  margin: 5px;
+  padding: 6px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  font-size: 16px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.acestream-link:hover {
+  transform: scale(1.05);
+  transition: transform 0.2s;
+  background-color: #f0f0f0;
 }
 
 .how-to-play-text a:hover {
