balón de oro text agenda tv

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -177,6 +177,11 @@
   }
 }
 
+.balon-de-oro-text {
+  display: flex;
+  justify-content: center;
+}
+
 @media (max-width: 1979px) {
   .futbol-tv-agendas {
     overflow-x: scroll;
