--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,6 +91,7 @@
       ></iframe>
     </div>
   </div>
+  <h2 class="balon-de-oro-text">20:45h - GALA DEL BALÓN DE ORO <i class="bi bi-arrow-right"></i> Canal:<a href="acestream://5a236fbbe6e5bbfec03db548c244a7c858d675c0"> Movistar Plus+</a></h2>
   <h3 class="header-enlaces">ENLACES</h3>
   <div class="links-container">
     <div class="column" *ngFor="let column of [0, 1]">
