--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,6 +91,9 @@
       ></iframe>
     </div>
   </div>
+  <h4 class="text-enlaces-agenda-completa">
+    Para ver la agenda completa, visita la web de&nbsp;<a href="https://www.futbolenlatv.es/" target="_blank">Fútbol en la TV <span style="vertical-align: middle;"><sup><i class="bi bi-box-arrow-in-up-right"></i></sup></span></a>
+  </h4>
   <h3 class="header-enlaces">ENLACES</h3>
   <div class="links-container">
     <div class="column" *ngFor="let column of [0, 1]">
@@ -144,6 +147,7 @@
       placement="right"
       href="https://github.com/MarkelRoman05"
       class="github-button"
+      target="_blank"
       ><i class="bi bi-github github-logo"></i
     ></a>
   </div>
