--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -150,5 +150,8 @@
       target="_blank"
       ><i class="bi bi-github github-logo"></i
     ></a>
+    <p class="footer-text">
+      Desarrollado por Markel05
+    </p>
   </div>
 </div>
