Some changes in the order of links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -126,7 +126,7 @@
       Para reproducir los enlaces Ace Stream en tu dispositivo necesitas tener
       instalado Ace Stream Media. Si no lo tienes instalado, puedes descargarlo
       desde la página oficial de Ace Stream haciendo clic
-      <a href="https://www.acestream.org/?page=products">aquí</a>. Una vez
+      <a href="https://www.acestreaM+ org/?page=products">aquí</a>. Una vez
       instalado, tienes dos formas de reproducir los enlaces: la primera es
       copiar el enlace, abrir Ace Player manualmente y pegar el enlace en la
       opción "Medio" <i class="bi bi-arrow-right"></i> "Open Ace Stream Content
@@ -134,8 +134,8 @@
       automáticamente Ace Player y reproducirá el contenido. Para reproducir
       estos enlaces, asegúrate de tener abierto Ace Stream Engine (ace_engine /
       Ace Stream HD), si no, ábrelo tú manualmente desde la ruta de instalación
-      de Ace Stream. Para reproducir los enlaces correctamente, es recomendable
-      cambiar ciertos parámetros en la configuración de Ace Stream. Para ello,
+      de Ace StreaM+  Para reproducir los enlaces correctamente, es recomendable
+      cambiar ciertos parámetros en la configuración de Ace StreaM+  Para ello,
       haz clic derecho sobre el icono de Ace Stream en la barra de tareas y
       selecciona "Options...". Allí, cambia los valores de "VOD buffer" a 10 y
       "Live buffer" a 60.
