Mini change on "Cómo reproducir"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,7 +92,13 @@
     </div>
   </div>
   <h4 class="text-enlaces-agenda-completa">
-    Para ver la agenda completa, visita la web de&nbsp;<a href="https://www.futbolenlatv.es/" target="_blank">Fútbol en la TV <span style="vertical-align: middle;"><sup><i class="bi bi-box-arrow-in-up-right"></i></sup></span></a>
+    Para ver la agenda completa, visita la web de&nbsp;<a
+      href="https://www.futbolenlatv.es/"
+      target="_blank"
+      >Fútbol en la TV
+      <span style="vertical-align: middle"
+        ><sup><i class="bi bi-box-arrow-in-up-right"></i></sup></span
+    ></a>
   </h4>
   <h3 class="header-enlaces">ENLACES</h3>
   <div class="links-container">
@@ -134,8 +140,8 @@
       automáticamente Ace Player y reproducirá el contenido. Para reproducir
       estos enlaces, asegúrate de tener abierto Ace Stream Engine (ace_engine /
       Ace Stream HD), si no, ábrelo tú manualmente desde la ruta de instalación
-      de Ace StreaM+  Para reproducir los enlaces correctamente, es recomendable
-      cambiar ciertos parámetros en la configuración de Ace StreaM+  Para ello,
+      de Ace Stream. Para reproducir los enlaces correctamente, es recomendable
+      cambiar ciertos parámetros en la configuración de Ace Stream. Para ello,
       haz clic derecho sobre el icono de Ace Stream en la barra de tareas y
       selecciona "Options...". Allí, cambia los valores de "VOD buffer" a 10 y
       "Live buffer" a 60.
@@ -150,8 +156,6 @@
       target="_blank"
       ><i class="bi bi-github github-logo"></i
     ></a>
-    <p class="footer-text">
-      Desarrollado por Markel05
-    </p>
+    <p class="footer-text">Desarrollado por Markel05</p>
   </div>
 </div>
