--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,15 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.1/angular-material-icons.min.js"></script>
 <div class="container">
-  <div class="header">
-    <h1 class="header-title">ACESTREAM LINKS</h1>
-  </div>
+  <nav class="navbar">
+    <div class="navbar-container">
+      <div class="navbar-logo">
+        <img src="balon.png" alt="Logo" class="logo" width="50" height="60">
+      </div>
+      <div class="navbar-title">
+        <h1>ACESTREAM LINKS</h1>
+      </div>
+    </div>
+  </nav>
   <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
   <img referrerpolicy="no-referrer-when-downgrade" src="https://markel-links.matomo.cloud/matomo.php?idsite=1&amp;rec=1" style="border:0" alt="" />
   <div class="futbol-tv-agendas">
