--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,9 +5,27 @@
   margin-top: 5px;
 }
 
-.header {
+.navbar {
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  margin-bottom: 1rem;
+}
+
+.navbar-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.navbar-logo .logo {
+  height: 50px;
+  margin-right: 20px;
+}
+
+.navbar-title h1 {
+  margin: 0;
+  font-size: 24px;
 }
 
 .custom-message {
