eliminar tooltip de enlace Ace Stream

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -124,7 +124,7 @@
               : (column + 1) * (links.length / 2)
         "
       >
-        <a matTooltip="Reproducir en Ace Player" matTooltipPosition="left" href="{{ link.url }}" class="acestream-link">{{ link.title }}</a>
+        <a href="{{ link.url }}" class="acestream-link">{{ link.title }}</a>
         <button
           matTooltip="Copiar enlace"
           matTooltipPosition="right"
