--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -118,6 +118,11 @@
   margin-bottom: 5px;
 }
 
+.agenda-text-component {
+  display: flex;
+  justify-content: center;
+}
+
 .text-enlaces-agenda-completa {
   display: flex;
   justify-content: center;
