--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -167,9 +167,13 @@
       (ace_engine / Ace Stream HD), si no, ábrelo tú manualmente desde la ruta
       de instalación de Ace Stream. Para reproducir los enlaces correctamente,
       es recomendable cambiar ciertos parámetros en la configuración de Ace
-      Stream. Para ello, haz clic derecho sobre el icono de Ace Stream en la
+      Stream y de Ace Player. Primero, haz clic derecho sobre el icono de Ace Stream en la
       barra de tareas y selecciona "Options...". Allí, cambia los valores de
-      "VOD buffer" a 10 y "Live buffer" a 60.
+      "VOD buffer" a 10 y "Live buffer" a 60. Después, en Ace Player, ve en la
+      parte de arriba a "Herramientas" <i class="bi bi-arrow-right"></i> "Preferencias"
+      <i class="bi bi-arrow-right"></i> "Vídeo" y en Desentrelazado selecciona "Automático" y
+      Modo <i class="bi bi-arrow-right"></i> "Yadif (2x)".
+
     </p>
   </div>
   <div class="footer">
